tests/build/widget/property_already_captured2.stderr
error: property `id` already captured in `new`
 --> $DIR/property_already_captured2.rs:7:57
  |
7 |     fn new(child: impl UiNode, id: impl Into<WidgetId>, id: impl Into<WidgetId>) {
  |                                                         ^^

error[E0415]: identifier `id` is bound more than once in this parameter list
 --> $DIR/property_already_captured2.rs:7:57
  |
7 |     fn new(child: impl UiNode, id: impl Into<WidgetId>, id: impl Into<WidgetId>) {
  |                                                         ^^ used as parameter more than once
